# rl_deploy_for_Cr1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  rebuild.sh  upload_deb.sh  version.h  wt_code_sync.sh
conf/: log.properties
config/: config.json  data_output.json  idle.json
interface/: CMakeLists.txt
interface/deb_pack/: change_log.md  postinst
interface/deb_pack/lib/onnxruntime/: libonnxruntime.so.1
interface/deb_pack/scripts/: rl_deploy.service  run.sh
interface/robot/: robot_interface.h
interface/robot/hardware/: cr1_arm_hardware_interface.hpp  cr1_hardware_interface.hpp  cr1pro_wbc_hardware_interface.hpp  cr1pro_wbc_simlution_interface.hpp  cr1std_wbc_hardware_interface.hpp  cr1std_wbc_simlution_interface.hpp  ecan_hardware_interface.hpp
interface/user_command/: keyboard_interface.hpp  retroid_gamepad_interface.hpp  skydroid_gamepad_interface.hpp  user_command_interface.h
policy/: cr1_pro_walk.onnx  model_23400.onnx  model_35600.onnx  tmppolicy.onnx  tmppolicy.onnx88  tmppolicy.onnx走
run_policy/: ShmReader.hpp  cr1pro_wbc_policy_runner.hpp  cr1pro_wbc_policy_runner.hpp.old  cr1std_wbc_policy_runner.hpp  humanoid_leg_policy_runner.hpp  json_loader.hpp  policy_runner_base.hpp
scripts/: receiver_test.py  scp_server_policy.sh  scp_torch_to_remote.sh  sftp_to_remote.sh  ssh.sh
simulation/: MUJOCO_LOG.TXT  mujoco_simulation.py  mujoco_simulation_copy.py  mujoco_simulation_pro.py  mujoco_simulation_std.py  pybullet_interface.hpp  pybullet_simulation.py  quadruped_raisim_simulation.hpp  qw_raisim_simulation.hpp  raisim_interface.hpp  sim2sim_dr2_pro.py
simulation/urdf_model/CR01B-pro/: B-20250522 copy.xml  B-20250522.urdf  B-20250522.xml  checkmjcf.py  extracet_keyword.py
simulation/urdf_model/CR01B-pro/meshes/: ankle_x.stl  base.stl  body.stl  elbow.stl  hip_x.stl  hip_y.stl  hip_z.stl  shoulder_z.stl  waist_x.stl  waist_z.stl  wrist_y.stl  wrist_z.stl
simulation/urdf_model/CR01B-standard/: B-20250522.urdf  B-20250522.xml  checkmjcf.py
simulation/urdf_model/CR01B-standard/meshes/: ankle_y.stl  knee.stl  shoulder_x.stl  shoulder_y.stl  wrist_x.stl
state_machine/: state_base.h  state_machine_base.h
state_machine/humanoid/: calibrate_state.hpp  humanoid_state_machine.hpp  idle_state.hpp  joint_damping_state.hpp  mimic_ready_state.hpp  rl_control_state.hpp  test_state.hpp
state_machine/parameters/: control_parameters.h  cr1_arm_control_parameters.cpp  cr1_control_parameters.cpp  cr1_leg_control_parameters.cpp  cr1pro_control_parameters.cpp  cr1std_control_parameters.cpp
types/: common_types.h  custom_types.h  dds_types.h
utils/: basic_function.hpp  data_streaming.hpp  motion_state_feedback.hpp  safe_controller.hpp
